--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.0.18",
+    "framer-motion": "^12.7.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
